<!--
  ~   Copyright (c) 2020, The University of Memphis, MD2K Center of Excellence
  ~  All rights reserved.
  ~
  ~  Redistribution and use in source and binary forms, with or without
  ~  modification, are permitted provided that the following conditions are met:
  ~
  ~  * Redistributions of source code must retain the above copyright notice, this
  ~  list of conditions and the following disclaimer.
  ~
  ~  * Redistributions in binary form must reproduce the above copyright notice,
  ~  this list of conditions and the following disclaimer in the documentation
  ~  and/or other materials provided with the distribution.
  ~
  ~  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~  AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~  IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~  DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~  FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~  DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~  SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~  CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~  OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<resources>
    <string name="app_name">MD2K WearOS DataCollector</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="title_text">Hello Square World!</string>
    <string name="accel_off">Accel OFF</string>
    <string name="accel_on">Accel ON</string>
    <string name="gyro_off">Gyro OFF</string>
    <string name="gyro_on">Gyro ON</string>
    <string name="ppg_off">PPG OFF</string>
    <string name="ppg_on">PPG ON</string>
    <string name="gps_off">GPS OFF</string>
    <string name="gps_on">GPS ON</string>
    <string name="gpstogglebutton">gpsToggleButton</string>
    <string name="ppgtogglebutton">ppgToggleButton</string>
</resources>