<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (c) 2020, The University of Memphis, MD2K Center of Excellence
  ~  All rights reserved.
  ~
  ~  Redistribution and use in source and binary forms, with or without
  ~  modification, are permitted provided that the following conditions are met:
  ~
  ~  * Redistributions of source code must retain the above copyright notice, this
  ~  list of conditions and the following disclaimer.
  ~
  ~  * Redistributions in binary form must reproduce the above copyright notice,
  ~  this list of conditions and the following disclaimer in the documentation
  ~  and/or other materials provided with the distribution.
  ~
  ~  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  ~  AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  ~  IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~  DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~  FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~  DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~  SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~  CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~  OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/inner_frame_layout_padding"
        app:boxedEdges="all">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_text"
                    android:textAlignment="center" />

                <ToggleButton
                    android:id="@+id/accelButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hapticFeedbackEnabled="true"
                    android:textOff="@string/accel_off"
                    android:textOn="@string/accel_on" />

                <ToggleButton
                    android:id="@+id/gyroButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hapticFeedbackEnabled="true"
                    android:textOff="@string/gyro_off"
                    android:textOn="@string/gyro_on" />

                <ToggleButton
                    android:id="@+id/ppgButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hapticFeedbackEnabled="true"
                    android:textOff="@string/ppg_off"
                    android:textOn="@string/ppg_on" />

            </LinearLayout>
        </ScrollView>

    </FrameLayout>
</androidx.wear.widget.BoxInsetLayout>